fixed the nav and added a dark mode toggle button

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,5 +1,10 @@
 $section-height: 100vh;
 $section-width: 99vw;
+$laptop: 1024px;
+$tablet: 768px;
+$large-mobile: 453px;
+$medium-mobile: 375px;
+$small-mobile: 320px;
 
 * {
 	box-sizing: border-box;
@@ -44,12 +49,75 @@ body {
 			display: flex;
 			justify-content: flex-end;
 			align-items: center;
-			margin-right: 30px;
+			margin-right: 5vw;
 			margin-bottom: 0;
 			gap: 20px;
 			list-style-type: none;
 			height: 9vh;
 			font-size: 1.1rem;
+
+			/* The switch - the box around the slider */
+			.switch {
+				position: relative;
+				display: inline-block;
+				width: 60px;
+				height: 34px;
+			}
+			
+			/* Hide default HTML checkbox */
+			.switch input {
+				opacity: 0;
+				width: 0;
+				height: 0;
+			}
+			
+			/* The slider */
+			.slider {
+				position: absolute;
+				cursor: pointer;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				background-color: #ccc;
+				-webkit-transition: .4s;
+				transition: .4s;
+			}
+			
+			.slider:before {
+				position: absolute;
+				content: "";
+				height: 26px;
+				width: 26px;
+				left: 4px;
+				bottom: 4px;
+				background-color: white;
+				-webkit-transition: .4s;
+				transition: .4s;
+			}
+			
+			input:checked + .slider {
+				background-color: #2196F3;
+			}
+			
+			input:focus + .slider {
+				box-shadow: 0 0 1px #2196F3;
+			}
+			
+			input:checked + .slider:before {
+				-webkit-transform: translateX(26px);
+				-ms-transform: translateX(26px);
+				transform: translateX(26px);
+			}
+			
+			/* Rounded sliders */
+			.slider.round {
+				border-radius: 34px;
+			}
+			
+			.slider.round:before {
+				border-radius: 50%;
+			}
 		}
 
 		a{
@@ -108,29 +176,15 @@ body {
 			scroll-snap-align: start;
 			text-align: center;
 
-			.bio-text-image-container{
-				display: flex;
-			}
-
-			.bio-text-container{
+			.p-container{
 				width: 50%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				text-align: justify;
-			}
+				font-size: 1.5rem;
 
-			.bio-image-container{
-				width: 50%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				
-				img{
-					width: 50vh;
-					height: 50vh;
+				span{
+					font-weight: bold;
 				}
 			}
+
 		}
 
 		.certificates{
@@ -197,6 +251,7 @@ body {
 	}
 }
 
+// light mode
 .dark {
 	background-color: #FAF6F9;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%237F7F7F' stroke-width='10' stroke-opacity='0.47'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
@@ -204,7 +259,11 @@ body {
 }
 
 .dark-text{
-	color: black;
+	color: #222222;
+}
+
+.light-contact-me-card{
+	color: #222222;
 }
 
 @keyframes slide-from-bottom {
@@ -264,193 +323,88 @@ body {
 	}
 }
 
-/* Media Queries for Responsiveness */
-@media only screen and (max-width: 1024px) {
-
-	.nav-bar{
-		ul{
-			padding-right: 15px;
+@media screen and (max-width: $laptop) {
+	.bio{
+		p{
+			font-size: 1.3rem;
 		}
 	}
+}
 
-	#landing{
-		h1 {
-			width: 100%;
-			font-size: 1.5rem;
-		}
-
+@media screen and (max-width: $tablet) {
+	.bio{
 		p{
-			width: 100%;
 			font-size: 1.1rem;
 		}
+	}
+}
 
-		#profile {
-			height: 220px;
-			width: 220px;
+@media screen and (max-width: $large-mobile) {
+	.nav-bar{
+		ul{
+			li{
+				font-size: 1rem;
+			}
+		}
+	}
+
+	#landing{
+		h1{
+			font-size: 1.5rem;
+		}
+	}
+
+	.bio{
+		p{
+			font-size: 0.9rem;
 		}
 	}
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: $medium-mobile) {
+	.nav-bar{
+		ul{
+			li{
+				font-size: 0.8rem;
+			}
+		}
+	}
+
 	#landing{
-		h1 {
-			width: 100%;
+		h1{
 			font-size: 1.4rem;
 		}
-
-		p{
-			width: 100%;
-			font-size: 1rem;
-		}
-
-		#profile {
-			height: 200px;
-			width: 200px;
-		}
-	}
-
-	.nav-bar{
-		font-size: 1rem;
-	}
-}
-
-@media only screen and (max-width: 580px) {
-	#landing{
-		h1 {
-			width: 100%;
-			font-size: 1.2rem;
-		}
-
-		p{
-			width: 100%;
-			font-size: 0.9rem;
-		}
-
-		#profile {
-			height: 180px;
-			width: 180px;
-		}
-	}
-
-	.nav-bar{
-		font-size: 1rem;
 	}
 
 	.bio{
-		.bio-text-image-container{
-			.bio-text-container{
-				font-size: 0.8rem;
-			}
+		p{
+			font-size: 0.8rem;
 		}
 	}
 }
 
-@media only screen and (max-width: 425px) {
-	#landing{
-		h1 {
-			width: 100%;
-			font-size: 0.9rem;
-		}
-
-		p{
-			width: 100%;
-			font-size: 0.8rem;
-		}
-
-		#profile {
-			height: 150px;
-			width: 150px;
-		}
-	}
-
+@media screen and (max-width: $small-mobile) {
 	.nav-bar{
 		ul{
 			li{
-				font-size: 0.8rem;
+				font-size: 0.6rem;
 			}
 		}
 	}
 
-	.bio{
-		.bio-text-image-container{
-			.bio-text-container{
-				font-size: 0.7rem;
-			}
-			.bio-image-container{
-				img{
-					display: none;
-				}
-			}
-		}
-	}
-}
-
-@media only screen and (max-width: 375px) {
 	#landing{
-		h1 {
-			width: 100%;
-			font-size: 0.9rem;
+		h1{
+			font-size: 1.3rem;
 		}
 
 		p{
-			width: 100%;
-			font-size: 0.8rem;
-		}
-
-		#profile {
-			height: 150px;
-			width: 150px;
-		}
-	}
-
-	.nav-bar{
-		ul{
-			li{
-				font-size: 0.7rem;
-			}
+			font-size: 1.1rem;
 		}
 	}
 
 	.bio{
-		.bio-text-image-container{
-			.bio-text-container{
-				font-size: 0.7rem;
-			}
-		}
-	}
-}
-
-@media only screen and (max-width: 320px) {
-	#landing{
-		h1 {
-			width: 100%;
-			font-size: 0.9rem;
-		}
-
 		p{
-			width: 100%;
-			font-size: 0.8rem;
-		}
-
-		#profile {
-			height: 150px;
-			width: 150px;
-		}
-	}
-
-	.nav-bar{
-		ul{
-			li{
-				font-size: 0.5rem;
-			}
-		}
-	}
-
-	.bio{
-		.bio-text-image-container{
-			.bio-text-container{
-				font-size: 0.7rem;
-			}
+			font-size: 0.7rem;
 		}
 	}
 }
